Finished initial implementation of work details adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="work_experience">Work Experience</string>
     <string name="skills">Languages, Frameworks, etc</string>
     <string name="about">About App</string>
+    <string name="icon">Icon</string>
 </resources>
