Finished initial implementation of education details adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="skills">Languages, Frameworks, etc</string>
     <string name="about">About App</string>
     <string name="icon">Icon</string>
+    <string name="GPA">GPA:</string>
 </resources>
