--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,12 @@
 <resources>
     <string name="app_name">Resume</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_name">Chris Ruddell</string>
     <string name="my_name_two_lines">Chris\nRuddell</string>
     <string name="position">Senior Android Developer</string>
     <string name="resume">Resume</string>
-    <string name="education">Education</string>
+    <string name="education">Academics</string>
     <string name="work_experience">Work Experience</string>
-    <string name="skills">Languages, Frameworks, etc</string>
+    <string name="skills">Skills</string>
     <string name="about">About App</string>
     <string name="icon">Icon</string>
     <string name="GPA">GPA:</string>
