--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="phone_number">512-806-RESUME</string>
+    <string name="phone_number">512–806-RESU(ME)</string>
     <string name="email">chris.ruddell@gmail.com</string>
     <string name="city_state">Austin, TX</string>
     <string name="personal_statement">I have been developing mobile apps for iOS and Android since 2012.
